fixed the driver query issues
